# karyohmm

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  tests.yml
data/: chr1.subset.1kg_phase3.phased.n50.vcf.gz.tbi  test_combined_embryo.tsv  test_disomy_embryo.tsv  test_disomy_embryo_no_lrr.tsv  test_mat_trisomy_embryo.tsv
docs/: conf.py  index.rst  karyohmm.rst
docs/_build/doctrees/: environment.pickle  index.doctree  karyohmm.doctree
docs/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/_build/html/_sources/: karyohmm.rst.txt
karyohmm/: __init__.py  cli.py  hmm_utils.pyx  infer_cli.py  io.py  karyohmm.py  karyohmm_utils.pyx  metahmm_cli.py  mosaicest_cli.py  pochmm_cli.py  simulate_cli.py  simulator.py
tests/: test_disomyhmm.py  test_duohmm.py  test_duohmm_ref.py  test_io.py  test_karyohmm.py  test_mccest.py  test_metahmm.py  test_mosaicest.py  test_phasecorrect.py  test_pochmm.py  test_quadhmm.py  test_recombest.py  test_simulator.py  test_utils.py  utils.py
