[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cython",
    "scipy",
    "numpy",
    "pandas",
    "rich_click",
    "cyvcf2"
]
build-backend = "setuptools.build_meta"

[project]
name = "karyohmm"
description = "HMM-based Aneuploidy Detection of PGT-A Array Data."
keywords = ["aneuploidy", "pgt", "haplotypes", "phasing"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
requires-python = ">= 3.9"
dependencies = ["numpy", "scipy", "pandas", "Cython", "rich_click", "cyvcf2"]
dynamic = ["version"]
authors = [{name = "Arjun Biddanda", email = "abiddan1@jhu.edu"}]

[project.urls]
Homepage = "https://github.com/mccoy-lab/karyohmm"

[project.optional-dependencies]
tests = [ "pytest", "pytest-cov", "hypothesis", "flake8", "sphinx"]

[project.scripts]
metahmm-infer = "karyohmm.metahmm_cli:main"
pochmm-infer = "karyohmm.pochmm_cli:main"
karyohmm-simulate = "karyohmm.simulate_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "karyohmm.__version__"

[tool.cython-lint]
max-line-length = 180
ignore = ['E501','E503', 'E504']
