[metadata]
name = karyohmm
author = Arjun Biddanda
author_email = abiddan1@jhu.edu
description = "HMM-based Aneuploidy Detection of PGT-A Array Data"
version = attr: karyohmm.__version__
url = https://github.com/mccoy-lab/karyohmm
keywords =
  aneuploidy
  pgt
  haplotypes
  phasing
classifiers =
  Development Status :: Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
install_requires =
   numpy
   scipy<=1.9.3
   Cython
   Click

[options.extras_require]
tests =
  pytest
  pytest-cov
  hypothesis
  flake8
  sphinx
